fix a crash bug and the text editor now functions

--- a/Spartan.xcodeproj/xcshareddata/xcschemes/Spartan.xcscheme
+++ b/Spartan.xcodeproj/xcshareddata/xcschemes/Spartan.xcscheme
@@ -28,6 +28,19 @@
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
       shouldUseLaunchSchemeArgsEnv = "YES"
       shouldAutocreateTestPlan = "YES">
+      <Testables>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "F88FBB3E2A3006C800E31EDA"
+               BuildableName = "SpartanRootHelperTests.xctest"
+               BlueprintName = "SpartanRootHelperTests"
+               ReferencedContainer = "container:Spartan.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
