--- a/Spartan/Info.plist
+++ b/Spartan/Info.plist
@@ -41,6 +41,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Sheikah.ttf</string>
+		<string>SF-Mono-Regular.otf</string>
 	</array>
 </dict>
 </plist>
