fix font in spawn view, add applist to /Applications, fix some crashes from force unwraps, add error handling to fontview and hexview

--- a/Spartan/Info.plist
+++ b/Spartan/Info.plist
@@ -41,7 +41,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>Sheikah.ttf</string>
-		<string>SF-Mono-Regular.otf</string>
+		<string>SF Mono.otf</string>
 	</array>
 </dict>
 </plist>
